--- a/server/c/logic/admin/Makefile
+++ b/server/c/logic/admin/Makefile
@@ -18,25 +18,32 @@ LFLAGS=
 
 DOTOH=\
 	SQLWork.o \
+	Session.o \
 	Col_test.o \
 	UpdateScheduleItem.o \
 	SaveSQLWork.o \
 	SQLTests.o \
 	SchedItem.o \
 	IAFile_test.o \
+	Action_test.o \
 	DeleteSQLWork.o \
+	User.o \
+	Group.o \
 	Row_test.o \
 	SQLWork_test.o \
 	SQLStmt.o \
 	DeleteScheduleItem.o \
 	DeleteIAFile.o \
+	Group_test.o \
 	IAFolder.o \
 	Col.o \
 	SQLTests_test.o \
+	Session_test.o \
 	IAFile.o \
 	IAFolder_test.o \
 	LoadSQLTestMeta.o \
 	GetOneScheduleItem.o \
+	User_test.o \
 	Row.o \
 	GetIAFileList.o \
 	SQLStmt_test.o \
@@ -47,7 +54,8 @@ DOTOH=\
 	GetScheduleItems.o \
 	SaveSQLTest.o \
 	GetSQLWork.o \
-	SchedItem_test.o
+	SchedItem_test.o \
+	Action.o
 
 all: $(DOTOH)
 	g++ -shared -o ../../bin/libhelix.logic.admin.so $(DOTOH) $(LFLAGS)
