--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
-# Auto detect text files and perform LF normalization
+# Auto detect text files and don't perform LF normalization
 * text=auto
+* -crlf
 
 # Custom for Visual Studio
 *.cs     diff=csharp
